# HexPet

./: CMakeLists.txt  README.md  package.xml
config/: phantomX_control.yaml
include/: classes.h  part.h
launch/: control.launch  hexpet_full.launch  hexpet_spawn.launch  rviz_phantomX.launch  spawn.launch  spawn_empty.launch  spawn_phantomX.launch  spawn_simple.launch
launch/general/: control.launch
launch/new/: new.launch
launch/old/: control.launch  hexpet_full.launch  hexpet_spawn.launch  my_world.launch
launch/old/testing/: rviz_phantomX.launch
launch/sim/: hex_sim.launch  my_world.launch  spawn_urdf_model.launch
launch/testing/: hexpet_full.launch  hexpet_spawn.launch
msg/: joint_cmd_msg.msg
rviz/: basic.rviz  debug.rviz
src/: interpreter.cpp  part.cpp  single_joint.cpp  teste_all.cpp  teste_joints.cpp
urdf/: hexpet copy.xacro  hexpet.xacro  phantomX.xacro  simple.xacro
